Correctif merge liens en double header

--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -19,11 +19,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="{{ path('app_sortie_creer') }}" class="btn btn-secondary my-2 my-sm-0">Créer une sortie</a>
+                                <a href="{{ path('app_sortie_creer') }}" class="btn btn-secondary my-2 my-sm-0">Créer
+                                    une sortie</a>
                             </li>
                         {% endif %}
-
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
 
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
@@ -31,18 +30,21 @@
 
                     {% if is_granted('ROLE_ADMIN') %}
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle nav-admin" data-bs-toggle="dropdown" href="#" role="button"
-                           aria-haspopup="true" aria-expanded="false">Administrer</a>
-                        <div class="dropdown-menu">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle nav-admin" data-bs-toggle="dropdown" href="#"
+                               role="button"
+                               aria-haspopup="true" aria-expanded="false">Administrer</a>
+                            <div class="dropdown-menu">
 
                                 <a class="dropdown-item" href="{{ path('app_admin_ville') }}">Villes</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
+                                <a class="dropdown-item" href="{{ path('app_admin_utilisateur') }}">Utilisateurs</a>
 
-                        </div>
 
-                    </li>
+                            </div>
+
+                        </li>
                     {% endif %}
                 </ul>
 
@@ -53,7 +55,7 @@
                                 <a class="nav-link" href="{{ path('app_profil_detail', { id: app.user.id }) }}">
                                     Bienvenue {{ app.user.pseudo }}
                                     {% if is_granted('ROLE_ADMIN') %}
-                                    [Admin]
+                                        [Admin]
                                     {% endif %}
                                     - {{ "now" | date("d/m/Y") }}
                                 </a>
@@ -65,20 +67,6 @@
                         {% endif %}
                     </ul>
                 </div>
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                               aria-haspopup="true" aria-expanded="false">Administrer</a>
-                            <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="{{ path('app_admin_utilisateur') }}">Utilisateurs</a>
-                                    <a class="dropdown-item" href="{{ path('app_admin_ville') }}">Villes</a>
-                                    <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
-                                    <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
-                            </div>
-
-                        </li>
-                    {% endif %}
-                </ul>
 
             </div>
         </div>
