--- a/templates/inscription/inscription.html.twig
+++ b/templates/inscription/inscription.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block title %}{{ parent() }} | Admin - Inscrire un utilisateur{% endblock %}
 
 {% block main %}
 
@@ -8,11 +8,10 @@
         <div class="card text-white bg-secondary mb-3" style="max-width: 32rem;">
             <div class="card-header d-flex align-items-center justify-content-center" style="min-height: 60px;">
                 <h2 class="card-title mb-0">
-Ajouter un utilisateur
+                    Inscrire un utilisateur
                 </h2>
             </div>
             <div class="card-body mt-4">
-
                 {{ form_errors(inscription_form) }}
                 {{ form_start(inscription_form) }}
                 {{ form_widget(inscription_form) }}
@@ -23,4 +22,5 @@ Ajouter un utilisateur
             </div>
         </div>
     </div>
+
 {% endblock %}
