--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -55,8 +55,11 @@
                     {{ form_widget(tri_form.Submit) }}
                     {{ form_widget(tri_form.Reset) }}
                 </div>
-
                 {{ form_end(tri_form) }}
+
+                <div class="text-center mt-4">
+                {{ form(afficher_tout_form) }}
+                </div>
 
             </div>
         </div>
