--- a/templates/sortie/edit.html.twig
+++ b/templates/sortie/edit.html.twig
@@ -40,6 +40,7 @@
                 {{ form_row(sortie_form.siteOrganisateur) }}
                 {{ form_row(sortie_form.lieu) }}
 
+                {{ form_row(sortie_form.publier) }}
                 <div class="text-center mt-3">
                     <button class="btn btn-primary">Valider</button>
                 </div>
