--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -91,8 +91,8 @@
                             <a href="{{ path('app_sortie_detail', { id: sortie.id }) }}"
                                class="btn btn-info">{{ sortie.nom }}</a>
                         </td>
-                        <td>{{ sortie.dateDebut | date('d/m/Y') }}</td>
-                        <td>{{ sortie.dateCloture | date('d/m/Y') }}</td>
+                        <td>{{ sortie.dateDebut | date }}</td>
+                        <td>{{ sortie.dateCloture | date }}</td>
                         <td>{{ sortie.participants.count }} / {{ sortie.nbInscriptionsMax }}</td>
                         <td>{{ sortie.etat.libelle }}</td>
                         <td>
