--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% form_theme profil_form 'bootstrap_5_layout.html.twig' %}
 
-{% block title %}{{ parent()}} | Modifier mon profil{% endblock %}
+{% block title %}{{ parent() }} | Modifier mon profil{% endblock %}
 
 {% block main %}
 
@@ -18,8 +18,11 @@
                 {{ form_errors(profil_form) }}
                 {{ form_start(profil_form) }}
                 {{ form_widget(profil_form) }}
-                <div class="text-center">
+                <div class="text-center mt-5 mb-3">
                     <button class="btn btn-primary">Enregistrer</button>
+                </div>
+                <div class="text-center mb-3">
+                    <a class="btn btn-dark" href="{{ path('app_profil_detail', { id: app.user.id }) }}">Retour</a>
                 </div>
                 {{ form_end(profil_form) }}
             </div>
