--- a/templates/sortie/edit.html.twig
+++ b/templates/sortie/edit.html.twig
@@ -40,7 +40,8 @@
                 {{ form_row(sortie_form.siteOrganisateur) }}
                 {{ form_row(sortie_form.lieu) }}
 
-                <div class="text-center mt-3">
+                <div class="text-center mt-5 mb-3">
+                    <a class="btn btn-dark" href="{{ path('app_accueil') }}">Retour</a>
                     <button class="btn btn-primary">Valider</button>
                 </div>
 
