--- a/templates/admin/ville.html.twig
+++ b/templates/admin/ville.html.twig
@@ -45,7 +45,7 @@
                 <tr>
                     <th scope="col">Ville</th>
                     <th scope="col">Code Postal</th>
-                    <th scope="col" style="width: 20%;">Actions</th>
+                    <th scope="col" style="width: 180px;">Actions</th>
                 </tr>
                 </thead>
 
@@ -56,7 +56,7 @@
                         <td>{{ ville.nom|capitalize }}</td>
                         <td>{{ ville.cpo }}</td>
 
-                        <td class="text-end" style="width: 20%;">
+                        <td style="width: 50px;">
                             <a class="btn btn-sm btn-info"
                                href="{{ path('app_admin_ville_update', { id: ville.id, token: csrf_token('ville_update' ~ ville.id) }) }}">
                                 Modifier
@@ -79,7 +79,7 @@
                     <td>
                         {{ form_row(villes_form.cpo) }}
                     </td>
-                    <td class="text-end" style="width: 20%;">
+                    <td style="width: 50px;">
                         {{ form_widget(villes_form.submit, {
                             label: 'Ajouter',
                             attr: { class: 'btn btn-success' }
