--- a/templates/profil/update_password.html.twig
+++ b/templates/profil/update_password.html.twig
@@ -15,8 +15,11 @@
                 {{ form_errors(update_password_form) }}
                 {{ form_start(update_password_form) }}
                 {{ form_widget(update_password_form) }}
-                <div class="text-center">
+                <div class="text-center mt-5 mb-3">
                     <button class="btn btn-primary">Modifier mon mot de passe</button>
+                </div>
+                <div class="text-center mb-3">
+                    <a class="btn btn-dark" href="{{ path('app_profil_detail', { id: app.user.id }) }}">Retour</a>
                 </div>
                 {{ form_end(update_password_form) }}
             </div>
