--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -18,12 +18,14 @@
                         <p class="text-light">Nom de la sortie : {{ sortie.nom }}</p>
                         <p class="text-light">Date et heure : {{ sortie.dateDebut|date('d/m/Y') }}</p>
                         <p class="text-light">Date limite : {{ sortie.dateCloture|date('d/m/Y') }}</p>
-                        <p class="text-light">Places : {{ sortie.participants.count }} / {{ sortie.nbInscriptionsMax }}</p>
+                        <p class="text-light">Places : {{ sortie.participants.count }}
+                            / {{ sortie.nbInscriptionsMax }}</p>
                         <p class="text-light">Durée : {{ sortie.duree }}</p>
                     </div>
 
                     <div class="col-md-6">
-                        <p class="text-light">Ville : {{ sortie.siteOrganisateur.nom }} - {{ sortie.lieu.ville.cpo }}</p>
+                        <p class="text-light">Ville : {{ sortie.siteOrganisateur.nom }}
+                            - {{ sortie.lieu.ville.cpo }}</p>
                         <p class="text-light">Lieu : {{ sortie.lieu.nom }}</p>
                         <p class="text-light">Rue : {{ sortie.lieu.rue }}</p>
                         <p class="text-light">Latitude : {{ sortie.lieu.latitude }}</p>
@@ -49,6 +51,7 @@
             <div class="text-center mt-3">
 
                 {% if not(app.user.sorties.contains(sortie)) %}
+                    <a class="btn btn-dark" href="{{ path('app_accueil') }}">Retour</a>
                     <a class="btn btn-success" href="{{ path('app_sortie_inscription', { id: sortie.id }) }}"
                        onclick="return confirm('Confirmer l\'inscription ?')">S'inscrire</a>
                 {% else %}
@@ -57,12 +60,14 @@
                         désinscrire</a>
                 {% endif %}
             </div>
+
         {% endif %}
 
 
 
         {% if app.user.pseudo == sortie.organisateur.pseudo %}
-            <div class="text-center mt-3"><a href="{{ path('app_sortie_edit', { id: sortie.id }) }}" class="btn btn-warning">Modifier</a>
+            <div class="text-center mt-3"><a href="{{ path('app_sortie_edit', { id: sortie.id }) }}"
+                                             class="btn btn-warning">Modifier</a>
                 <a href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
                    class="btn btn-warning"
                    onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a></div>
@@ -72,8 +77,8 @@
 
         {% if is_granted('ROLE_ADMIN') %}
             <div class="text-center mt-3 mb-4"><a class="btn btn-danger"
-                     href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
-                     onclick="return confirm('[ADMINISTRATEUR] Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a>
+                                                  href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
+                                                  onclick="return confirm('[ADMINISTRATEUR] Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a>
             </div>
 
         {% endif %}
@@ -90,13 +95,21 @@
             </div>
 
             <div class="mt-3">
-                {% for participant in participants %}
-                    <p class="liens-participants-inscrits"><a
-                            href="{{ path('app_profil_detail', { id: participant.id }) }}">
-                            {{ participant.pseudo }}
-                        </a></p>
-                {% endfor %}
-            </div>        </div>
+                {% if participants.empty() %}
+                    <p class="text-center">Aucun participant.</p>
+
+                {% else %}
+
+
+                    {% for participant in participants %}
+                        <p class="liens-participants-inscrits"><a
+                                href="{{ path('app_profil_detail', { id: participant.id }) }}">
+                                {{ participant.pseudo }}
+                            </a></p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
     </div>
 
 
