--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -40,6 +40,7 @@
                                 <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_utilisateur') }}">Utilisateurs</a>
+                                <a class="dropdown-item" href="{{ path('app_admin_archive') }}">Sorties Archivées</a>
 
 
                             </div>
