WIP Publier une sortie

--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -29,28 +29,25 @@
                 <span class="badge rounded-pill bg-{{ status_class[sortie.etat.libelle] }}">
                     {{ status_label[sortie.etat.libelle]|capitalize }}
                 </span>
-
             </div>
 
             <div class="card-body">
                 <div class="row">
-
                     <div class="col-md-6">
                         <p class="text-light">Nom de la sortie : {{ sortie.nom }}</p>
-                        <p class="text-light">Date et heure : {{ sortie.dateDebut|date('d/m/Y') }}</p>
-                        <p class="text-light">Date limite : {{ sortie.dateCloture|date('d/m/Y') }}</p>
+                        <p class="text-light">Date et heure : {{ sortie.dateDebut|date }}</p>
+                        <p class="text-light">Date limite : {{ sortie.dateCloture|date }}</p>
                         <p class="text-light">Places : {{ sortie.participants.count }}
                             / {{ sortie.nbInscriptionsMax }}</p>
                         <p class="text-light">Durée : {{ sortie.duree }}</p>
                     </div>
 
                     <div class="col-md-6">
-                        <p class="text-light">Ville : {{ sortie.siteOrganisateur.nom }}
-                            - {{ sortie.lieu.ville.cpo }}</p>
                         <p class="text-light">Lieu : {{ sortie.lieu.nom }}</p>
                         <p class="text-light">Rue : {{ sortie.lieu.rue }}</p>
-                        <p class="text-light">Latitude : {{ sortie.lieu.latitude }}</p>
-                        <p class="text-light">Longitude : {{ sortie.lieu.longitude }}</p>
+                        <p class="text-light">Ville : {{ sortie.siteOrganisateur.nom }}
+                            - {{ sortie.lieu.ville.cpo }}</p>
+                        <p class="text-light">Latitude / longitude : {{ sortie.lieu.latitude }} / {{ sortie.lieu.longitude }}</p>
                     </div>
                 </div>
             </div>
@@ -84,8 +81,8 @@
             <div class="text-center mt-3"><a href="{{ path('app_sortie_edit', { id: sortie.id }) }}"
                                              class="btn btn-warning">Modifier</a>
                 <a href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
-                   class="btn btn-warning"
-                   onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a></div>
+                   class="btn btn-dark"
+                   onclick="return confirm('Êtes-vous sûr·e de vouloir annuler cette sortie ?')">Annuler</a></div>
         {% endif %}
 
         {% if is_granted('ROLE_ADMIN') %}
